[package]
name = "gpkg-derive"
version = "0.2.0"
edition = "2021"
homepage = "https://github.com/cjriley9/gpkg-rs"
repository = "https://github.com/cjriley9/gpkg-rs"
license = "MIT OR Apache-2.0"
description = "Internal crate used for derive macros in gpkg crate"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = {version = "1.0", features = ["parsing", "extra-traits"]}
quote = "1.0" 
proc-macro2 = "1.0"

[lib]
proc-macro = true
path = "lib.rs"

[homepage]
