[package]
name = "gpkg-core"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/cjriley9/gpkg-rs"
repository = "https://github.com/cjriley9/gpkg-rs"
license = "MIT OR Apache-2.0"
description = "Rust library for working with GeoPackages"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = "0.27.0"
geo-types = "0.7.4"
gpkg-derive = { version = "0.1.0", path = "../gpkg-derive" }
wkb = "0.7.1"
thiserror = "1.0.31"
byteorder = "1.4.3"
